--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -3,9 +3,10 @@
 .banner {
     position: absolute;
     top: 0;
-    bottom: 0;
     left: 0;
     right: 0;
+    height: 100vh;
+    height: -webkit-fill-available;
     display: flex;
     align-items: center;
     justify-content: center;
